# FlightAware2columbus

./: .gitignore  Dockerfile  Makefile  README.md  circle.yml  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  scent.py  setup.py
IJCAI18/: __init__.py
IJCAI18/tests/: __init__.py
docs/: index.md
flightaware2columbus/: __init__.py  __main__.py  flight_parser.py  geo_distance.py  gpx_writer.py  parsers.py
flightaware2columbus/tests/: __init__.py  test_IJCAI18.py  test_geo_distance.py  test_gpx_writer.py  test_parsers.py
tests/: __init__.py  conftest.py  test_all.py
